...
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/navigation_searches" />
    <!-- <item
        android:id="@+id/navigation_new_product"
        android:icon="@drawable/create_icon"
        android:title="@string/new_product" /> -->
</menu>
