...
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="15dp"
            android:text="@string/barcode_product_activity_manual_input_label"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/barcodeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <EditText
...
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/barcode_product_activity_message_inside_textbox"
            android:inputType="number"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberTextView" />

        <ImageButton
...
